Changed userId from Long to Integer. Had to change half the codebase with it....